[AF Paradise] Fix issue in migration dialog

1) Make the error dialog block browser, which is consistent with other
dialogs.

2) Override Close() function since otherwise if user close browser when dialog
is visible, the default Close() will call Cancel().

Bug: 913154
Change-Id: I2e0c92621ae04ce34a212dabcf69be2cad99bdf8
Reviewed-on: https://chromium-review.googlesource.com/c/1359752
Commit-Queue: Siyu An <siyua@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#614268}(cherry picked from commit 5e1cf6391dbd9e9cd1cb8a4d674717d8bba53c87 [formerly 2596ec460ffe11900b95ca0718b53682fb806525])
Reviewed-on: https://chromium-review.googlesource.com/c/1370825
Reviewed-by: Jared Saul <jsaul@google.com>
Cr-Commit-Position: refs/branch-heads/3626@{#235}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: b925cbeea5a4d0855aeda617b79abe064acf8937